--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
         <div class="content">
        
-        <input id="yname" class="textField1" type="text" placeholder="Name1 etc.Jehiel" name="yname" required autofocus>
+        <input id="yname" class="textField1" type="text" placeholder="Name1 eg: Jehiel" name="yname" required autofocus>
         <input id="pname" class="textField2" type="text" placeholder="Name2" name="pname" required autofocus>
             <button onclick="buttonClick()" class="btn" >Flames</button> 
         <span id="view" class="result"></span>
